LOG:

         - 0.5.33 library liblixabmt was renamed to liblixab
                  library liblixacmt was renamed to liblixac

20110504 - 0.5.32 the package supplies an example that shows how LIXA can
                  be used in conjunction with Oracle Database Server and IBM
                  DB2, performing a real distributed transaction

20110426 - 0.5.31 the package supplies an example that shows how LIXA can
                  be used in conjunction with IBM DB2

20110419 - 0.5.30 the package supplies an example that shows how LIXA can
                  be used in conjunction with Oracle Database Server

20110401 - 0.5.29 "make install" installs the HTML version of the manual in
                  the standard doc directory
                  "make dist" injects the HTML version of the manual in the
                  package
                  utility "lixat" (LIXA test) has been added 

20110228 - 0.5.28 changed "trnmgr" with "sttsrv" and "trnmgrs" with "sttsrvs"
                  in the lixac_conf.xml file; the previous name was 
                  misleading because the LIXA server is not a transaction
                  manager but it only persists the state of the transaction
                  managers (embedded in liblixac)

20110130 - 0.5.27 fixed bug # 3166737
                  NOTE: the client/server communication protocol was changed:
                  this change breaks backward compatibility 

20110120 - 0.5.26 fixed bug # 3160058
 
20110108 - 0.5.25 fixed bug # 3147263
                  fixed bug # 3152044
                  fixed bug # 3152633

20101223 - 0.5.24 the client side code (lixac) passed valgrind memory leak
                  the server side code (lixad) passed valgring memory leak

20101124 - 0.5.23 fixed bug # 3110744

20101122 - 0.5.22 fixed bug # 3110828

20101103 - 0.5.21 fixed bug # 3102459

20100925 - 0.5.20 implemented test cases XA/5.52/*.*
                  implemented test case MT/1.0/0.*
                  fixed bug # 3074315
