@@ -2,6 +2,7 @@ LOG:
 
          - 0.5.33 library liblixabmt was renamed to liblixab
                   library liblixacmt was renamed to liblixac
+                  a switch file for PostgreSQL is now available
 
 20110504 - 0.5.32 the package supplies an example that shows how LIXA can
                   be used in conjunction with Oracle Database Server and IBM
